# QLAB

./: .gitignore  README.md
cvg_sim_gazebo_plugins/src/: gazebo_ros_magnetic.cpp
cvg_sim_gazebo_plugins/urdf/: quadrotor_simple_controller.urdf.xacro
deep_reinforced_landing/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
deep_reinforced_landing/include/: boundingBox.h  utilities.h
deep_reinforced_landing/launch/: drl.launch
deep_reinforced_landing/src/: clean_buffer_negative.py  clean_buffer_positive.py  count_experiences.py  debug_experience.py  drl_services_node.cpp  drl_services_real_uav.cpp  experience_replay_buffer.py  extract_experiences.py  merge_buffer.py  multiappend_buffer.py  multisplit_buffer.py  q_network.py  remove_experiences.py  replay_buffer.py  rotate_replay_buffer.py  shuffle_experiences.py  split_buffer.py  teleop_keyboard.py  teleop_spacenav.cpp  test_buffer_architecture.py  utilities.cpp  visualise_action_distribution.py  visualise_action_distribution_real_UAV.py  visualise_experience.py  visualize_action_distribution.py
deep_reinforced_landing/src/descending/: descending_filling_replay_buffer.py  descending_human_pilot_esperiment.py  descending_human_pilot_esperiment_real_worlds.py  descending_real_uav.py  descending_test_ar-tracker.py  descending_test_ckp_list.py  descending_test_descending.py  descending_test_epsilon.py  descending_test_lights.py  descending_test_non_uniform.py  descending_test_random.py  descending_train.py
deep_reinforced_landing/src/detection/: detection_filling_replay_buffer.py  detection_human_pilot.py  detection_test_ar-tracker.py  detection_test_detection.py  detection_test_non_uniform.py  detection_train.py
deep_reinforced_landing/srv/: GetDoneAndReward.srv  ResetPosition.srv
drl/: README.md
drl/launch/: drl.launch
drl/src/: boundingBox.cpp  drl_services_node.cpp
drl/srv/: NewCameraService.srv  SendCommand.srv
qlab/cvg_sim_gazebo_plugins/: CMakeLists.txt  package.xml
qlab/cvg_sim_gazebo_plugins/src/: diffdrive_plugin_6w.cpp  gazebo_ros_baro.cpp  gazebo_ros_gps.cpp  gazebo_ros_imu.cpp  gazebo_ros_sonar.cpp  quadrotor_simple_controller.cpp  quadrotor_state_controller.cpp
qlab/cvg_sim_gazebo_plugins/urdf/: quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.urdf.xacro
qlab/cvg_sim_msgs/: CMakeLists.txt  package.xml
qlab/drl/: CMakeLists.txt
qlab/drl/include/: utilities.h
qlab/drl/msg/: reset_req.msg  reward_req.msg
qlab/drl/src/: utilities.cpp
qlab/drl/srv/: GetCameraImage.srv  GetDoneAndReward.srv
qlab/kingfisher_control/: CMakeLists.txt  README.md  package.xml
qlab/kingfisher_control/cfg/: TwistDynamic.cfg  YawDynamic.cfg
qlab/kingfisher_control/config/: kingfisher_joy.yaml  pid_yaw1.yaml  twist_mux_topics.yaml  twist_pid.yaml
qlab/kingfisher_control/launch/: course_control.launch  course_control_gazebo.launch  ex_localization.launch  kingfisher_twist_control.launch  localization.launch  m2m.launch  pid_diagnostics.launch  pub0odom.launch  pub0odom.py  yaw_pypid.launch  yaw_pypid_controller.launch  yawcontrol.launch
qlab/kingfisher_control/msg/: PidDiagnose.msg
qlab/kingfisher_control/nodes/: kingfisher_twist_control.py  kingfisher_yaw_control.py  pid_control.py  pidplot.sh  set_setpoint.sh
qlab/kingfisher_control/rviz/: localization.rviz
qlab/kingfisher_control/scripts/: pub_course_box.sh  pubcourse.sh  pubdrive.sh  pubtwist.sh  srv_pid_engage.sh
qlab/kingfisher_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
qlab/kingfisher_description/launch/: description.launch
qlab/kingfisher_description/meshes/: kingfisher_base.stl  left_panel.stl  right_panel.stl
qlab/kingfisher_description/urdf/: base.urdf.xacro  materials.urdf.xacro  parts.urdf.xacro  standard.urdf.xacro
qlab/kingfisher_gazebo/: CMakeLists.txt  aptget_heron.sh  package.xml
qlab/kingfisher_gazebo/config/: custom_rosconsole.conf  kingfisher_camera.perspective
qlab/kingfisher_gazebo/launch/: base_gazebo.launch  elestero.launch  kingfisher_gazebo_worlds.launch  kingfisher_microstrain.launch  spawn_heron.launch  uav_usv.launch
qlab/kingfisher_gazebo/models/buoy/: model.config  model.sdf
qlab/kingfisher_gazebo/models/buoy_black/: model.config  model.sdf
qlab/kingfisher_gazebo/models/buoy_blue/: model.config  model.sdf
qlab/kingfisher_gazebo/models/buoy_green/: model.config  model.sdf
qlab/kingfisher_gazebo/models/buoy_red/: model.config  model.sdf
qlab/kingfisher_gazebo/models/buoy_yellow/: model.config  model.sdf
qlab/kingfisher_gazebo/models/delmonte/: model.config  model.sdf
qlab/kingfisher_gazebo/models/elestero/: elestero.xcf  elestero_squar.xcf  model.config  model.sdf
qlab/kingfisher_gazebo/models/lake/: model.config  model.sdf
qlab/kingfisher_gazebo/models/water_plane/: model.config  model.sdf
qlab/kingfisher_gazebo/nodes/: gpsimu2odom.py  p3d2nav.py  rotate_test.py
qlab/kingfisher_gazebo/urdf/: base.urdf.xacro  base2.urdf.xacro  base_gazebo.xacro  base_gazebo_base.xacro  base_imu_gps_gazebo.xacro  base_urdf.xacro  gps_gazebo.xacro  imu_gazebo.xacro  kingfisher_camera.xacro  kingfisher_urdf.xacro  kingfisher_urdf_base.xacro  kingfisher_urdf_camera.xacro  p3d_gazebo.xacro  parts.mininertia.urdf.xacro  usv_gazebo.xacro
qlab/kingfisher_gazebo/worlds/: delmonte.world  elestero.world  elestero_potentials.world  lake.world  lake_buoy.world  mypond.world  pond.world
qlab/kingfisher_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
qlab/kingfisher_msgs/msg/: Course.msg  Drive.msg  Helm.msg  Power.msg  Sense.msg
qlab/kingfisher_utils/: CMakeLists.txt  package.xml
qlab/kingfisher_utils/config/: custom_rosconsole.conf  kingfisher_joy.yaml
qlab/kingfisher_utils/launch/: kingfisher_joydrive.launch  rviz_bagplay.launch
qlab/kingfisher_utils/scripts/: get_data.sh  kf_connect_wifi.sh  twist2drive.py
qlab/qlab_description/: package.xml
qlab/qlab_gazebo/: CMakeLists.txt  package.xml
qlab/qlab_gazebo/launch/: qlab.launch  (+2 more)
qlab_description/: CMakeLists.txt
qlab_description/urdf/: quadrotor_sensors.urdf.xacro
share/video/: Readme.md
(+288 files in other folders)
