<?xml version="1.0"?>
<package>
  <name>kingfisher_msgs</name>
  <version>0.1.0</version>
  <description>
    Provides standard messages specific to Kingfisher, especially for 
    the microcontroller's rosserial interface.
  </description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
